feat: suggest candidate
